--- a/.github/workflows/update_repo_count.yml
+++ b/.github/workflows/update_repo_count.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Get repository count
         id: repo_count
         run: |
-          COUNT=$(curl -s https://api.github.com/users/${{ github.repository_owner }}/repos?per_page=1 | jq '. | length')
+          COUNT=$(curl -s https://api.github.com/users/${{ github.repository_owner }}/repos | jq '. | length')
           echo "repo_count=$COUNT" >> $GITHUB_ENV
 
       - name: Update Gist with new count
