--- a/.github/workflows/update_repo_count.yml
+++ b/.github/workflows/update_repo_count.yml
@@ -31,4 +31,6 @@ jobs:
           curl -X PATCH "https://api.github.com/gists/$GIST_ID" \
             -H "Authorization: token $TOKEN" \
             -H "Accept: application/vnd.github.v3+json" \
-            -d "{\"files\": {\"repo-count.json\": {\"content\": \"$JSON\"}}}"
+            -d "$(jq -n --argjson json "$JSON" '{"files": {"repo-count.json": {"content": $json}}}')"
+
+          #-d "{\"files\": {\"repo-count.json\": {\"content\": \"$JSON\"}}}"
